2002-07-29  David Hyatt  <hyatt@apple.com>

	Fix for 3008660, arstechnica regression.  Move the acquisition
	of the document's text color (and the addition of CSS properties)
	to the attach() call instead of the constructor.  The table won't
	add the properties until it is building its render object.

	Also removing the #ifndef around the layout scheduler.  This fixes
	:hover feedback and reflows from things like the marquee on
	livepage.apple.com.
	
        * khtml/html/html_tableimpl.cpp:
        (HTMLTableElementImpl::HTMLTableElementImpl):
        (HTMLTableElementImpl::id):
        (HTMLTableElementImpl::attach):
        * khtml/html/html_tableimpl.h:
        * khtml/rendering/render_object.h:

2002-07-29  Darin Adler  <darin@apple.com>

	- fixed 3010875 -- Find only works for latin characters
	- dealt with part of 2948387 -- stop button flashes to "go" twice while loading citibank.com

        * force-clean-timestamp: Make everyone do a make clean because dependencies won't do
	the right thing.

        * khtml/khtml_part.h:
        * khtml/khtml_part.cpp: (KHTMLPart::slotRedirect): Changed the APPLE_CHANGES ifdefs around
	in this function so we can start using it again.
	(KHTMLPart::jumpToSelection): Removed. The bridge goes straight to the impl. 

        * kwq/WebCoreBridge.mm: (-[WebCoreBridge jumpToSelection]): Go straight to the impl.

        * WebCore-tests.exp: One new export needed for tests with change to qstring.h.

        * kwq/qt/qevent.h:
        * kwq/KWQEvent.mm: Removed unused stuff.

        * kwq/KWQKHTMLPartImpl.h: Removed redirectURL(); we now use KHTMLPart::slotRedirect().

        * kwq/KWQKHTMLPartImpl.mm:
        (KWQKHTMLPartImpl::write): Call latin1() explicitly in here for m_documentSource. It was being
	done implicitly before.
        (KWQKHTMLPartImpl::scheduleRedirection): Get rid of 1-second minimum delay for meta refresh.
        (KWQKHTMLPartImpl::timerEvent): Call KHTMLPart::slotRedirect() instead of redirectURL(), because